Break into cli and lib

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,6 @@
-[package]
-name = "megasena"
-version = "1.0.0"
-edition = "2021"
-
-[dependencies]
-unidecode = "0.3.0"
+[workspace]
+resolver = "2"
+members = [
+    "cli",
+    "megasena",
+]
